[gd_scene load_steps=5 format=3 uid="uid://cvot4nwv8gcqs"]

[ext_resource type="Texture2D" uid="uid://nbv5n2fruxgw" path="res://planets_sprite.png" id="1_v4go8"]
[ext_resource type="Script" path="res://planet_reworked.gd" id="1_wmjhd"]
[ext_resource type="Texture2D" uid="uid://cpyelos8750ys" path="res://planet_ring.png" id="2_8rbt8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_egcdd"]
size = Vector2(16, 16)

[node name="planet_reworked" type="Node2D" groups=["planets_group"]]
z_index = 5
script = ExtResource("1_wmjhd")

[node name="Sprite2D2" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_8rbt8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v4go8")
hframes = 3

[node name="planet_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="planet_area"]
shape = SubResource("RectangleShape2D_egcdd")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
action_mode = 0
button_mask = 3

[connection signal="mouse_entered" from="planet_area" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="planet_area" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
